style: fixed style scaling issue
fixed issue with style scaling, making diffrent items not line up

--- a/images/frontend/angular-portfolio-website/src/app/app.component.scss
+++ b/images/frontend/angular-portfolio-website/src/app/app.component.scss
@@ -18,7 +18,7 @@
     margin: 7vh 0 0;
     padding-top: 2vh;
     height: 70vh;
-    width: calc(95vw - 5rem);
+    width: 100%;
     border-left: 3px solid;
     border-right: 3px solid;
     align-items: center;
