--- a/images/frontend/angular-portfolio-website/src/app/core/shared/components/secondary-nav/secondary-nav.component.scss
+++ b/images/frontend/angular-portfolio-website/src/app/core/shared/components/secondary-nav/secondary-nav.component.scss
@@ -19,14 +19,17 @@
 }
 
 .secondaryNavLink{
+        display: flex;
+    align-items: center;
     text-decoration: none;
     box-sizing: border-box;
-    width: calc(100% / 6);
-    padding: 4vh 0;
+    width: 100%;
+    height: 5em;
     color: black;
     text-align: center;
     font-weight: 800;
     font-size: 20pt;
+    justify-content: center;
 }
 
 .secondaryNavLink:hover{
